<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.activity.MainActivity"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="false"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="@dimen/dp_0">

            <include layout="@layout/common_toolbar" />
        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:id="@+id/fragment_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/main_floating_action_btn"
            style="@style/style_float_btn"
            android:layout_marginBottom="@dimen/dp_60"
            android:layout_marginEnd="@dimen/dp_16"
            android:src="@mipmap/icon_up_arrow"
            app:layout_behavior="@string/scale_down_show_behavior" />

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottom_navigation_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorCard"
            app:elevation="@dimen/dp_16"
            app:itemIconTint="@drawable/nav_item_color_state"
            app:itemTextColor="@drawable/nav_item_color_state"
            app:layout_behavior="@string/bye_burger_bottom_behavior"
            app:menu="@menu/bottom_navigation_main" />
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/drawer_item_bg_n"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/nav_menu"
        app:itemBackground="@drawable/drawer_item_bg" />
</android.support.v4.widget.DrawerLayout>
