<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_200"
    android:background="@mipmap/ic_navigation_bg"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_16"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@null"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/nav_header_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_in"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/white" />
</LinearLayout>
